# walnut-dns

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile  walnut.local.toml
.github/workflows/: ci.yml
src/: catalog.rs  codec.rs  database.rs  error.rs  lib.rs  lookup.rs  notify.rs
src/authority/: catalog.rs  dnssec.rs  edns.rs  mod.rs  response.rs
src/authority/dnssec/: authorize.rs  catalog.rs  mod.rs  prerequisites.rs  update.rs
src/cache/: config.rs  lookup.rs  mod.rs  service.rs
src/client/: codec.rs  connection.rs  http.rs  messages.rs  mod.rs  udp.rs
src/client/nameserver/: connection.rs  mod.rs  monitor.rs  pool.rs  simple.rs  targeted.rs
src/database/: dnssec.rs  journal.rs  mod.rs  pool.rs  query.rs  record.rs  zone.rs
src/migrations/: 01.zone.sql
src/resolver/: factory.rs  hosts.rs  lookup.rs  mod.rs  recursive.rs  reserved.rs
src/rr/: id.rs  mod.rs  name.rs  record.rs  rset.rs  sequence.rs  sql.rs  ttl.rs  zone.rs
src/server/: connection.rs  mod.rs  request.rs  response.rs  stream.rs  tcp.rs  udp.rs
src/services/: http.rs  mod.rs  serialize.rs
tests/: authority_tests.rs  catalog_tests.rs  chained_authority_tests.rs  integration.rs  persistence_tests.rs  server_future_tests.rs  server_tests.rs
tests/scripts/: gen-certs.sh
tests/support/: examples.rs  mod.rs
tests/test-data/: ca.der  ca.key  ca.pem  ca.pubkey  cert-key.pk8  cert.csr  cert.p12  cert.pem
zones/: .gitignore
