[package]
name = "walnut-dns"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.87"
description = "Additions and helpers for flexible hickory-dns servers"
repository = "https://github.com/alexrudy/walnut-dns"
documentation = "https://docs.rs/walnut-dns"
readme = "README.md"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
categories = ["network-programming", "web-programming"]
keywords = ["dns", "server", "async"]

[dependencies]
arc-swap = "1"
async-trait = "0.1"
bb8 = { version = "0.8", optional = true }
bytes = "1"
camino = "1"
chrono = "0.4"
clap = { version = "4", optional = true }
data-encoding = { version = "2.2.0", default-features = false }
futures = "0.3"
hickory-proto = { version = "0.25", features = ["mdns", "dnssec-ring"] }
hickory-server = { version = "0.25", features = ["dnssec-ring"] }
http = { version = "1", optional = true }
http-body = { version = "1", optional = true }
pin-project = "1.1.10"
rusqlite = { version = "0.37", features = ["blob", "chrono", "uuid", "trace"] }
rustls-pki-types = "1.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio-util = { version = "0.7.15", features = ["codec", "net"] }
tower = "0.5"
tracing = "0.1"
zeroize = "1"

[dependencies.uuid]
version = "^1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "net"]

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["logging", "std", "tls12"]

[dependencies.monarch-db]
version = ">=0.1.1"
# git = "https://github.com/alexrudy/monarch-db.git"

[dependencies.tracing-subscriber]
version = "^0.3"
features = ["env-filter", "json", "fmt", "ansi", "std"]
optional = true

[dependencies.chateau]
features = ["codec", "client", "server"]
version = "0.1.0"
path = "../chateau"
# git = "https://github.com/alexrudy/chateau.git"


[dev-dependencies]
hickory-client = { version = "0.25" }
hickory-proto = { version = "0.25", features = ["tls-ring"] }
hickory-server = { version = "0.25", features = ["testing", "tls-ring"] }
hyperdriver = { version = "*", features = [
    "server",
    "tls",
    "tls-ring",
    "stream",
] }
serde_json = "1.0"
tempfile = "3.0"
tokio = "1"
tower = "0.5"
static-assertions = { version = "1", package = "static_assertions" }

[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["env-filter", "json", "fmt", "ansi", "std"]

[features]
default = []
tls = []
tls-ring = ["tls", "chateau/tls-ring", "hickory-proto/tls-ring"]
tls-awc-lc = ["tls", "chateau/tls-aws-lc", "hickory-proto/tls-aws-lc-rs"]
http = ["dep:http", "dep:http-body"]
h2 = ["http"]
h2-ring = ["hickory-proto/https-ring", "h2"]
h2-aws-lc = ["hickory-proto/https-aws-lc-rs", "h2"]
pool = ["dep:bb8"]
bundled = ["rusqlite/bundled"]
cli = ["dep:clap", "dep:tracing-subscriber", "tokio/signal"]

[[bin]]
name = "walnut-manage"
path = "src/bin/manage.rs"
required-features = ["cli"]

[[bin]]
name = "walnut"
path = "src/bin/client.rs"
required-features = ["cli"]

[[bin]]
name = "walnut-server"
path = "src/bin/server.rs"
required-features = ["cli"]
